# IoT_Edge_Node_Security_Monitoring_System

./: CMakeLists.txt  IoT_Edge_Node_Security_Monitoring_System.rc  README.md
RPi_EdgeNode/config/: config.ini
RPi_EdgeNode/src/app/: main.py
RPi_EdgeNode/src/core/: data_collector.py
RPi_EdgeNode/src/network/: tcp_client.py
RPi_EdgeNode/src/sensors/: sensor_dht22.py  sensor_mq2.py
RPi_EdgeNode/src/utils/: common_utils.py
src/app/: main.cpp
src/core/: DatabaseManager.cpp  DatabaseManager.h  MainWindow.cpp  MainWindow.h
src/network/: TcpClientHandler.cpp  TcpClientHandler.h  TcpServerMgr.cpp  TcpServerMgr.h
src/ui/: MainWindow.ui
src/widgets/: SensorChartWidget.cpp  SensorChartWidget.h
